--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 import { SITE_AUTHOR } from "@/consts";
 ---
 
-<footer class="card mt-0">
+<footer class="pb-4">
   &copy; {new Date().getFullYear()}
   {SITE_AUTHOR}. All rights reserved.
 </footer>
