--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,6 +19,13 @@ body {
     margin: auto;
 }
 
+#ink-canvas {
+    position: fixed;
+    inset: 0;
+    z-index: -10;
+    pointer-events: none;
+}
+
 .dots-row {
     display: flex;
     justify-content: space-between;
@@ -237,6 +244,7 @@ footer {
 .weekly-content li {
     position: relative;
     padding-left: 1.5rem;
+    text-align: left;
 }
 
 .weekly-content li::before {
@@ -258,10 +266,11 @@ footer {
     content: "";
     position: absolute;
     left: 1.4rem;
-    top: 0.7em;
-    width: 0.9rem;
-    height: 1px;
-    background: currentColor;
+    top: 0em;
+    width: 100%;
+    height: 90%;
+    border-top: 1px solid currentColor;
+    border-bottom: 1px solid currentColor;
     opacity: 0.45;
 }
 
