--- a/src/layouts/BodyLayout.astro
+++ b/src/layouts/BodyLayout.astro
@@ -14,6 +14,103 @@ const {
     <BaseHead title={title} description={description} />
   </head>
   <body class={bodyClass}>
+    <svg
+      class="fixed inset-0 pointer-events-none"
+      aria-hidden="true"
+      style="width: 0; height: 0;"
+    >
+      <defs>
+        <filter id="n0">
+          <feTurbulence
+            type="turbulence"
+            baseFrequency="0.001 0.1"
+            numOctaves="5"
+            result="NOISE"></feTurbulence>
+          <feGaussianBlur in="SourceGraphic" result="BLURRED" stdDeviation="4.5"
+          ></feGaussianBlur>
+          <feDisplacementMap
+            in2="NOISE"
+            in="BLURRED"
+            scale="50"
+            xChannelSelector="R"
+            yChannelSelector="G"></feDisplacementMap>
+        </filter>
+        <filter id="n1">
+          <feTurbulence
+            type="fractalNoise"
+            baseFrequency="0.001 0.001"
+            numOctaves="5"
+            result="NOISE"
+            seed="061714"></feTurbulence>
+          <feGaussianBlur in="SourceGraphic" result="BLURRED" stdDeviation="0"
+          ></feGaussianBlur>
+          <feDisplacementMap
+            id="displacer"
+            in2="NOISE"
+            in="BLURRED"
+            scale="37"
+            xChannelSelector="R"
+            yChannelSelector="R"
+            result="DISPLACED"></feDisplacementMap>
+        </filter>
+        <filter id="n2" color-interpolation-filters="sRGB">
+          <feTurbulence
+            type="fractalNoise"
+            baseFrequency="0.001 0.001"
+            numOctaves="5"
+            result="NOISE"
+            seed="061714"></feTurbulence>
+          <feGaussianBlur in="SourceGraphic" result="BLURRED" stdDeviation="0"
+          ></feGaussianBlur>
+          <feDisplacementMap
+            id="displacer"
+            in2="NOISE"
+            in="BLURRED"
+            scale="15"
+            xChannelSelector="R"
+            yChannelSelector="R"
+            result="DISPLACED"></feDisplacementMap>
+
+          <feColorMatrix
+            in="DISPLACED"
+            result="RED"
+            type="matrix"
+            values="0 0 0 0 0
+                      0 1 0 0 0
+                      0 0 1 0 0
+                      0 0 0 1 0"
+          ></feColorMatrix>
+
+          <feColorMatrix
+            in="DISPLACED"
+            result="GREEN"
+            type="matrix"
+            values="1 0 0 0 0
+                      0 0 0 0 0
+                      0 0 1 0 0
+                      0 0 0 1 0"
+          ></feColorMatrix>
+
+          <feColorMatrix
+            in="DISPLACED"
+            result="BLUE"
+            type="matrix"
+            values="1 0 0 0 0
+                      0 1 0 0 0
+                      0 0 0 0 0
+                      0 0 0 1 0"
+          ></feColorMatrix>
+
+          <feOffset in="RED" dx="-3" dy="0" result="D_RED"></feOffset>
+          <feOffset in="GREEN" dx="0" dy="0" result="D_GREEN"></feOffset>
+          <feOffset in="BLUE" dx="3" dy="0" result="D_BLUE"></feOffset>
+
+          <feBlend in="D_RED" in2="D_BLUE" out="RB" mode="multiply"></feBlend>
+
+          <feBlend in="D_GREEN" in2="RB" out="RGB" mode="multiply"></feBlend>
+        </filter>
+      </defs>
+    </svg>
     <canvas id="ink-canvas" aria-hidden="true"></canvas>
     <DotsRow class="dots-row--top" />
     <slot />
